--- a/package.json
+++ b/package.json
@@ -2,14 +2,18 @@
   "name": "hardhat-project",
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^1.0.1",
+    "@nomiclabs/hardhat-waffle": "^2.0.3",
+    "chai": "^4.3.7",
     "eslint-plugin-react": "^7.31.11",
-    "hardhat": "^2.10.2",
+    "hardhat": "^2.12.3",
     "web-vitals": "^3.1.0"
   },
   "dependencies": {
     "create-react": "^0.0.0",
+    "dotenv": "^16.0.3",
     "jsbi": "^3.2.5",
     "react-bootstrap-icons": "^1.10.2",
-    "react-spinners": "^0.13.6"
+    "react-spinners": "^0.13.6",
+    "solc": "^0.8.17"
   }
 }
