--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "chai": "^4.3.7",
     "eslint-plugin-react": "^7.31.11",
     "hardhat": "^2.12.3",
+    "typescript": "^4.9.3",
     "web-vitals": "^3.1.0"
   },
   "dependencies": {
